--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,105 @@
-#content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+body {
+    margin: 60px 0 0;
+    font-family: sans-serif;
+    background-color: #1C2E4A;
+    color: #FFFFFFE6;
+    padding-bottom: 60px;
 }
 
-#greeting-container {
-  margin-top: 20px;
+header {
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    top: 0;
+    z-index: 5;
+    background-color: #152238;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+header p {
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+#content {
+    margin: auto;
+    max-width: 1000px;
+    display: grid;
+    grid-template-columns: 30% 70%;
+}
+
+#side-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
+}
+
+#side-info > img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+}
+
+#side-info > h1 {
+    margin-top: 20px;
+    margin-bottom: 4px;
+    font-size: 2em;
+    font-weight: 600;
+}
+
+#social-icons {
+    margin-top: 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#social-icons > div {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+#social-icons a {
+    color: inherit;
+}
+
+#about-me h2 {
+    margin-bottom: 6px;
+}
+
+#about-me h3 {
+    margin-bottom: 6px;
+}
+
+#about-me p {
+    font-size: 18px;
+    margin-top: 0;
+}
+
+#about-me img {
+    width: 100%;
+}
+
+#about-me a {
+    color: inherit;
+}
+
+.carrousel-img {
+    height: 280px;
+    background-size: cover;
+    background-position: center;
+    margin-bottom: 30px;
+}
+
+.carrousel-footer {
+    width: 100%;
+    color: black;
+    background-color: #AAAAAAEE;
+    position: absolute;
+    bottom: 12px;
+    padding: 6px;
 }
