--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -51,6 +51,18 @@ header p {
     font-weight: 600;
 }
 
+#random-fact-div {
+    margin: 30px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#random-fact-div * {
+    text-align: center;
+    margin: 4px 0;
+}
+
 #social-icons {
     margin-top: 18px;
     display: flex;
