Add languages page

--- a/portfolio/src/main/webapp/styles/index.css
+++ b/portfolio/src/main/webapp/styles/index.css
@@ -1,3 +1,8 @@
+#content {
+    max-width: 1000px;
+    grid-template-columns: 30% 70%;
+}
+
 #side-info {
     display: flex;
     flex-direction: column;
