--- a/portfolio/src/main/webapp/styles/common.css
+++ b/portfolio/src/main/webapp/styles/common.css
@@ -32,8 +32,7 @@ header a {
 
 #content {
     margin: auto;
-    padding: 0 50px;
-    max-width: 1000px;
+    padding: 20px;
+    max-width: 800px;
     display: grid;
-    grid-template-columns: 30% 70%;
 }
